diesel_compile_tests/tests/fail/columns_cannot_be_rhs_of_insert.stderr
error[E0277]: the trait bound `diesel::insertable::ColumnInsertValue<users::columns::name, &users::columns::hair_color>: diesel::insertable::InsertValues<users::table, _>` is not satisfied
  --> $DIR/columns_cannot_be_rhs_of_insert.rs:20:10
   |
20 |         .execute(&conn)
   |          ^^^^^^^ the trait `diesel::insertable::InsertValues<users::table, _>` is not implemented for `diesel::insertable::ColumnInsertValue<users::columns::name, &users::columns::hair_color>`
   |
   = help: the following implementations were found:
             <diesel::insertable::ColumnInsertValue<Col, Expr> as diesel::insertable::InsertValues<<Col as diesel::Column>::Table, DB>>
             <diesel::insertable::ColumnInsertValue<Col, Expr> as diesel::insertable::InsertValues<<Col as diesel::Column>::Table, diesel::sqlite::Sqlite>>
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `diesel::query_builder::ValuesClause<diesel::insertable::ColumnInsertValue<users::columns::name, &users::columns::hair_color>, users::table>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `diesel::query_builder::InsertStatement<users::table, diesel::query_builder::ValuesClause<diesel::insertable::ColumnInsertValue<users::columns::name, &users::columns::hair_color>, users::table>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::load_dsl::ExecuteDsl<_, _>` for `diesel::query_builder::InsertStatement<users::table, diesel::query_builder::ValuesClause<diesel::insertable::ColumnInsertValue<users::columns::name, &users::columns::hair_color>, users::table>>`
